manifests/common/base/linkerd-policies.yaml
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: arbeidsflate-allow-meshed
  labels:
    app.kubernetes.io/part-of: arbeidsflate
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: arbeidsflate-http
  requiredAuthenticationRefs:
    - group: policy.linkerd.io
      kind: MeshTLSAuthentication
      name: arbeidsflate-mesh-authn
---
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: arbeidsflate-allow-network
  labels:
    app.kubernetes.io/part-of: arbeidsflate
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: arbeidsflate-http
  requiredAuthenticationRefs:
    - group: policy.linkerd.io
      kind: NetworkAuthentication
      name: arbeidsflate-network-authn
